스크롤시 메인페이지 pics 사진 시간차 적용

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,124 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>React App</title>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b69452ce16e9f23e029618955eb504bc"></script>
+  <style>
+    .defaults {
+      position: absolute;
+      top: -99999px;
+    }
+
+    .mask {
+      width: 100%;
+      height: 100vh;
+      background: #111;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 5;
+      opacity: 1;
+      transition: opacity 2s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font: 25px/1 'noto sans';
+      font-weight: 100;
+      color: #fff;
+    }
+
+    .mask.off {
+      opacity: 0;
+    }
+  </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div class="defaults"></div>
+  <div class="mask">Loading...</div>
+
+  <script>
+    const defaults = document.querySelector('.defaults');
+    const mask = document.querySelector('.mask');
+    let tags = '';
+    const baseURL = 'https://hong-kyungs.github.io/react_portfolio1';
+    const imgs = [
+      baseURL + '/img/Community.jpg',
+      baseURL + '/img/Gallery.jpg',
+      baseURL + '/img/Youtube.jpg',
+      baseURL + '/img/Community.jpg',
+      baseURL + '/img/Location.jpg',
+      baseURL + '/img/Members.jpg',
+      baseURL + '/img/Login.jpg',
+    ];
+    const vids = [
+      baseURL + '/img/main_ad.mp4'
+    ];
+    const lenImg = imgs.length;
+    const lenVid = vids.length;
+
+    createDOM();
+
+    Promise.all([loadImg(), loadVid()]).then(result => {
+      console.log(result);
+      const [loadedImg, loadedVid] = result;
+
+      if (loadedImg && loadedVid) {
+        console.log('mask-hide');
+        mask.classList.add('off');
+
+        setTimeout(() => {
+          mask.remove();
+          defaults.remove();
+        }, 2000)
+      }
+    })
+
+    function createDOM() {
+      imgs.forEach(src => {
+        tags += `<img src=${src} />`
+      })
+      vids.forEach(src => {
+        tags += `<video src=${src}></video>`
+      })
+      defaults.innerHTML = tags;
+    }
+
+    function loadImg() {
+      return new Promise((res, rej) => {
+        let countImg = 0;
+        const imgDOM = defaults.querySelectorAll('img');
+
+        imgDOM.forEach(img => {
+          img.onload = () => {
+            countImg++;
+            console.log('img loaded', countImg);
+            if (countImg === lenImg) {
+              res(true);
+            }
+          }
+        })
+      })
+    }
+
+    function loadVid() {
+      return new Promise((res, rej) => {
+        let countVid = 0;
+        const vidDOM = defaults.querySelectorAll('video');
+
+        vidDOM.forEach(vid => {
+          vid.onloadeddata = () => {
+            countVid++;
+            console.log('vid loaded', countVid);
+            if (countVid === lenVid) {
+              res(true);
+            }
+          }
+        })
+      })
+    }
+  </script>
+
 
 </body>
 
